<resources>
    <string name="app_name">ZzrLearnApp</string>
    <string name="openOtherActivity">Simulation opens other activity</string>

    <!--Grafika-->
    <string name="workJobName_text">Working&#8230;</string>
    <string name="preparing_content">Preparing content&#8230;</string>
    <string name="contentGenerationFailedTitle">Unable to generate content</string>
    <string name="contentGenerationFailedMsg">Failed to generate content.
        Some features may be unavailable.\n\n%1$s</string>
    <string name="ok">OK</string>
    <string name="about_item">About</string>
    <string name="regenerateContent_item">Regenerate content</string>
    <string name="about_text">\nA random assortment of graphics and media hacks.\n\n
        [This is a perpetual work in progress.]\n\n
        Copyright 2013-2014 Google Inc.  All rights reserved.</string>
    <string name="title_activity_play_movie">Play Video (TextureView)</string>
    <string name="title_activity_continuous_capture">Continuous Capture (SurfaceView)</string>
    <string name="title_activity_double_decode">Double Decode (TextureView)</string>
    <string name="title_activity_hardware_scaler">Hardware scaler (SurfaceView)</string>

    <string name="play_button_text">Play</string>
    <string name="stop_button_text">Stop</string>
    <string name="locked60fps_checkbox">Play at 60fps</string>
    <string name="loopPlayback_checkbox">Loop playback</string>
    <string name="capture">Capture</string>
    <string name="secondsOfVideo">%1$.3f seconds of video</string>
    <string name="nowRecording">" [RECORDING]"</string>
    <string name="nowSaving">" [saving]"</string>
    <string name="recordingSucceeded">Recording succeeded</string>
    <string name="recordingFailed">Recording FAILED (err=%1$d)</string>

    <string name="viewSizeLabel">Initial view size:</string>
    <string name="flatShaded">flat shaded</string>
    <string name="surfaceSizeTiny">[tiny]</string>
    <string name="surfaceSizeSmall">[small]</string>
    <string name="surfaceSizeMedium">[medium]</string>
    <string name="surfaceSizeFull">[full]</string>

    <string name="glTextureViewCaption">GLES rendered into a TextureView</string>
    <string name="toggleReleaseCallbackOff">Toggle release (now: ST callback)</string>
    <string name="toggleReleaseCallbackOn">Toggle release (now: renderer)</string>
    <string name="title_activity_textureview_gl">Renders with GL as quickly as possible</string>

    <string name="title_activity_live_camera">Live camera (TextureView)</string>
    <string name="title_activity_camera_capture">Show + capture camera</string>
    <string name="toggleRecordingOn">Start recording</string>
    <string name="toggleRecordingOff">Stop recording</string>
    <string name="cameraOutputFileLabel_text">Output file:</string>
    <string name="cameraOutputFile_text">[filename]</string>
    <!-- for cameraFilter_spinner; match with CameraCaptureActivity constants -->
    <string-array name="cameraFilterNames">
        <item>Normal</item>
        <item>Black &amp; white</item>
        <item>Filter: blur</item>
        <item>Filter: sharpen</item>
        <item>Filter: edge detect</item>
        <item>Filter: emboss</item>
    </string-array>

    <!-- permission -->
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

</resources>
