<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".grafika.HardwareScalerActivity">

    <SurfaceView
        android:id="@+id/hardwareScaler_surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/viewSizeLabel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/viewSizeLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/viewSizeValue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/viewSizeLabel_text"
        android:layout_alignBottom="@+id/viewSizeLabel_text"
        android:layout_toRightOf="@+id/viewSizeLabel_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <RadioGroup
        android:id="@+id/surfaceSize_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSizeLabel_text"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/surfaceSizeTiny_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/surfaceSizeTiny" />

        <RadioButton
            android:id="@+id/surfaceSizeSmall_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/surfaceSizeSmall" />

        <RadioButton
            android:id="@+id/surfaceSizeMedium_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/surfaceSizeMedium" />

        <RadioButton
            android:id="@+id/surfaceSizeFull_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/surfaceSizeFull" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/flatShading_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/surfaceSize_radiogroup"
        android:onClick="onFlatShadingClicked"
        android:text="@string/flatShaded" />
</RelativeLayout>