<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:id="@+id/glTextureViewCaption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glTextureViewCaption"
        android:visibility="gone"/>

    <Button
        android:id="@+id/open_other_activity"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/glTextureViewCaption_text"
        android:layout_below="@+id/glTextureViewCaption_text"
        android:text="@string/openOtherActivity"
        android:onClick="clickOpenOtherActivity" />

    <Button
        android:id="@+id/toggleRelease_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/open_other_activity"
        android:layout_below="@+id/open_other_activity"
        android:text="@string/toggleReleaseCallbackOff"
        android:onClick="clickToggleRelease" />


    <TextureView
        android:id="@+id/glTextureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/glTextureViewCaption_text"
        android:layout_below="@+id/toggleRelease_button" />
</RelativeLayout>